--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.docker.pg.env
+.docker.pgadmin.env
 
 # turbo
 .turbo
+
+data
