--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -5,3 +5,5 @@ DATABASE_HOST=localhost
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
 DATABASE=rental_postgres
+JWT_SECRET=some_secret
+JWT_EXPIRES_IN=1d
