--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.1.2",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "joi": "^17.6.0",
     "passport": "^0.6.0",
     "pg": "^8.7.3",
