--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "bootstrap": "5.1.3",
     "react": "^18.1.0",
+    "react-bootstrap": "2.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
