--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "2.4.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "7.31.3",
     "react-hot-toast": "2.2.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
