refactor: :wrench: missing env var for cors

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -7,3 +7,4 @@ DATABASE_PASSWORD=postgres
 DATABASE=rental_postgres
 JWT_SECRET=some_secret
 JWT_EXPIRES_IN=1d
+CLIENT_ORIGINS=http://localhost:6001
